src/test/ui/borrowck/borrowck-while-cond.stderr
error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-while-cond.rs:3:11
   |
LL |     while x { }
   |           ^ use of possibly uninitialized `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
